Incorrect pasting of F-Curves in graph editor #63980

Closed
opened 2019-04-29 10:42:03 +02:00 by Stanislav Ovcharov · 20 comments

System Information
Operating system: Windows-8.1-6.3.9600 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 09:24, hash: c9ed39925a
Worked: (optional)

Short description of error
Incorrect pasting of F-Curves in graph editor while you trying to copy paste F-Curve e.g. from Rot Y channel of one bone to Rot Z(X) or Loc Z(X) channel of another Bone. You get flat f-curve as result (you have to scale up to 10 000 000 to get source values even if you copy Rot to Rot), or incomplete (half of source f-curve pasted)

Exact steps for others to reproduce the error
Here is example. Default rigify metarig.

  1. Copy Rot Y F-Curve from Spine.001 (yellow circle) and paste it to other bones channel (correct pasting to Rot Y (Loc Y) of other bones only)

Option A. Paste it to Rot X of upper_arm.L (red circle) As result you get flat F-Curve, but if you scale it Y up to 10 000 000 you see that it paste half of source f-curve with incorrect values

Option B. Paste it to Loc Z of spine (blue star) you get flat curve but if you scale it Y up to 1 000 000 it looks correct, meanwhile if you paste it to Loc Y you get correct result immediately

Incorrect_F-Curves_pasting.blend

**System Information** Operating system: Windows-8.1-6.3.9600 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 09:24, hash: `c9ed39925a` Worked: (optional) **Short description of error** Incorrect pasting of F-Curves in graph editor while you trying to copy paste F-Curve e.g. from Rot Y channel of one bone to Rot Z(X) or Loc Z(X) channel of another Bone. You get flat f-curve as result (you have to scale up to 10 000 000 to get source values even if you copy Rot to Rot), or incomplete (half of source f-curve pasted) **Exact steps for others to reproduce the error** Here is example. Default rigify metarig. 1. Copy Rot Y F-Curve from Spine.001 (yellow circle) and paste it to other bones channel (correct pasting to Rot Y (Loc Y) of other bones only) Option A. Paste it to Rot X of upper_arm.L (red circle) As result you get flat F-Curve, but if you scale it Y up to 10 000 000 you see that it paste half of source f-curve with incorrect values Option B. Paste it to Loc Z of spine (blue star) you get flat curve but if you scale it Y up to 1 000 000 it looks correct, meanwhile if you paste it to Loc Y you get correct result immediately [Incorrect_F-Curves_pasting.blend](https://archive.blender.org/developer/F6991165/Incorrect_F-Curves_pasting.blend)

Added subscriber: @StanislavOvcharov

Added subscriber: @StanislavOvcharov
Campbell Barton was assigned by Stanislav Ovcharov 2019-04-29 10:43:56 +02:00
Campbell Barton was unassigned by Sebastian Parborg 2019-04-29 18:51:47 +02:00
Alexander Gavrilov was assigned by Sebastian Parborg 2019-04-29 18:51:47 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I would set that to high priority bug at least among animation tasks, because this is a fundamental workflow in graph editor

I would set that to high priority bug at least among animation tasks, because this is a fundamental workflow in graph editor

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

Your file has keyframes in all three curves selected (check Dope Sheet), so Copy stores all three curves, and subsequently Paste selects keys from the appropriate X, Y or Z curve. If you deselect all with A and then select only the Y curve before Copy, everything works as you'd expect. I.e. to paste from arbitrary curve to arbitrary curve, you must ensure that only one curve is selected both during Copy and Paste.

Your file has keyframes in all three curves selected (check Dope Sheet), so Copy stores all three curves, and subsequently Paste selects keys from the appropriate X, Y or Z curve. If you deselect all with A and then select only the Y curve before Copy, everything works as you'd expect. I.e. to paste from arbitrary curve to arbitrary curve, you must ensure that only one curve is selected both during Copy and Paste.

Possibly you could argue that Copy should take into account which curves are selected in the Graph editor (like Paste does), instead of just keyframes, but this is a UI design issue, not a bug as such.

Possibly you could argue that Copy should take into account which curves are selected in the Graph editor (like Paste does), instead of just keyframes, but this is a UI design issue, not a bug as such.

In #63980#669353, @angavrilov wrote:
Your file has keyframes in all three curves selected (check Dope Sheet), so Copy stores all three curves, and subsequently Paste selects keys from the appropriate X, Y or Z curve. If you deselect all with A and then select only the Y curve before Copy, everything works as you'd expect. I.e. to paste from arbitrary curve to arbitrary curve, you must ensure that only one curve is selected both during Copy and Paste.

weird.. cause I select Rot Y only channel for copy.. here is a gif - F_curves_test.gif
and why paste to Loc Y and Loc Z (option B) has different scale?

> In #63980#669353, @angavrilov wrote: > Your file has keyframes in all three curves selected (check Dope Sheet), so Copy stores all three curves, and subsequently Paste selects keys from the appropriate X, Y or Z curve. If you deselect all with A and then select only the Y curve before Copy, everything works as you'd expect. I.e. to paste from arbitrary curve to arbitrary curve, you must ensure that only one curve is selected both during Copy and Paste. weird.. cause I select Rot Y only channel for copy.. here is a gif - ![F_curves_test.gif](https://archive.blender.org/developer/F6998941/F_curves_test.gif) and why paste to Loc Y and Loc Z (option B) has different scale?

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Selecting channels doesn't matter for Copy, only selecting keyframes themselves. View -> Only Selected Curve Keyframes makes this confusing, but it's off by default. Maybe when that option is enabled, Copy should also only use selected curves.

Changing this is a one-line fix, but I'm not sure nobody would complain if it were changed to be the other way. As I said, this is completely a UI design issue.

Selecting channels doesn't matter for Copy, only selecting keyframes themselves. View -> Only Selected Curve Keyframes makes this confusing, but it's off by default. Maybe when that option is enabled, Copy should also only use selected curves. Changing this is a one-line fix, but I'm not sure nobody would complain if it were changed to be the other way. As I said, this is completely a UI design issue.

In #63980#669359, @angavrilov wrote:
Selecting channels doesn't matter for Copy, only selecting keyframes themselves. View -> Only Selected Curve Keyframes makes this confusing, but it's off by default. Maybe when that option is enabled, Copy should also only use selected curves.

Changing this is a one-line fix, but I'm not sure nobody would complain if it were changed to be the other way. As I said, this is completely a UI design issue.

oh, indeed, it does work with only selected keyframes disabled. But if it is enabled and doesn't work same way is not it a bug? Is it still UI issue? Maybe then this task should be converted in TO DO task or something?

> In #63980#669359, @angavrilov wrote: > Selecting channels doesn't matter for Copy, only selecting keyframes themselves. View -> Only Selected Curve Keyframes makes this confusing, but it's off by default. Maybe when that option is enabled, Copy should also only use selected curves. > > Changing this is a one-line fix, but I'm not sure nobody would complain if it were changed to be the other way. As I said, this is completely a UI design issue. oh, indeed, it does work with only selected keyframes disabled. But if it is enabled and doesn't work same way is not it a bug? Is it still UI issue? Maybe then this task should be converted in TO DO task or something?

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

@angavrilov I agree with @StanislavOvcharov that the current behaviour is rather strange. I haven't tried this myself, but copying a nice curvy curve and seeing that the result of pasting is a almost completely flattened curve would make my scratch my head. Who would see this as desirable behaviour?

@angavrilov I agree with @StanislavOvcharov that the current behaviour is rather strange. I haven't tried this myself, but copying a nice curvy curve and seeing that the result of pasting is a almost completely flattened curve would make my scratch my head. Who would see this as desirable behaviour?

This issue was referenced by fc040335b7

This issue was referenced by fc040335b7a5eeaa3c57bd176656f86f9d56dc48

The "flattened" thing is completely misleading: it is actually copying the X and Z curves of the original bone, which contain not-quite-zero values, likely due to numeric precision limitations in matrix operations of transform tools.

The "flattened" thing is completely misleading: it is actually copying the X and Z curves of the original bone, which contain not-quite-zero values, likely due to numeric precision limitations in matrix operations of transform tools.

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

I didn't get. what the problem with copy keyframes since the fix was made.. seems it copy paste as usual.. I can copy paste them in graf editor or dopeshit and it doesn't matter channel selected or not. here is a gif -copy keyframes_test.gif
and it doesn't matter that only selected curve keyframes on or off

I didn't get. what the problem with copy keyframes since the fix was made.. seems it copy paste as usual.. I can copy paste them in graf editor or dopeshit and it doesn't matter channel selected or not. here is a gif -![copy keyframes_test.gif](https://archive.blender.org/developer/F7002982/copy_keyframes_test.gif) and it doesn't matter that only selected curve keyframes on or off

In fc040335b7#227888, @angavrilov wrote:
When "Only Selected Curve Keyframes" is enabled, it must work like this, because otherwise it is very confusing, as shown by the bug report.

Then, the next question is whether display options should affect the behavior of operations. If not, then it has to always work like in this commit...

I think the basis of the discussion should be that it should be clear what exactly you're copying. @StanislavOvcharov describes (in the task) that copying the Y-channel and pasting onto the Z-channel doesn't properly work. @angavrilov if you found out that he was actually not copying the Y-channel at all, then the bug is indeed in understanding the UI (and not in the paste behaviour, as I initially thought).

In #63980#669359, @angavrilov wrote:
View -> Only Selected Curve Keyframes makes this confusing, but it's off by default. Maybe when that option is enabled, Copy should also only use selected curves.

To me copying stuff that is hidden makes no sense, so I would say that display options should affect the behaviour of operations, so I definitely agree with this.

When "View -> Only Selected Curve Keyframes" is false, I feel that "Copy Keyframes" should just copy the selected keyframes whether they belong to a selected channel or not, simply because that follows the name of the operator.

> In fc040335b7#227888, @angavrilov wrote: > When "Only Selected Curve Keyframes" is enabled, it must work like this, because otherwise it is very confusing, as shown by the bug report. > > Then, the next question is whether display options should affect the behavior of operations. If not, then it has to always work like in this commit... I think the basis of the discussion should be that it should be clear what exactly you're copying. @StanislavOvcharov describes (in the task) that copying the Y-channel and pasting onto the Z-channel doesn't properly work. @angavrilov if you found out that he was actually not copying the Y-channel at all, then the bug is indeed in understanding the UI (and not in the paste behaviour, as I initially thought). > In #63980#669359, @angavrilov wrote: > View -> Only Selected Curve Keyframes makes this confusing, but it's off by default. Maybe when that option is enabled, Copy should also only use selected curves. To me copying stuff that is hidden makes no sense, so I would say that display options should affect the behaviour of operations, so I definitely agree with this. When "View -> Only Selected Curve Keyframes" is false, I feel that "Copy Keyframes" should just copy the selected keyframes whether they belong to a selected channel or not, simply because that follows the name of the operator.

Basically, if you are pasting multiple curves, Paste does some magic to match up channels by property name and coordinate axis. This allows you to safely copy & paste all transform curves at once, but if you want to copy & paste between arbitrary channels, you must ensure you only copy one curve, and paste into one channel. Here keys in all 3 channels were selected, but it was not visible to the user due to "Show Selected". The clipboard thus ended up containing all 3 curves, and Paste applied the axis matching logic.

Basically, if you are pasting multiple curves, Paste does some magic to match up channels by property name and coordinate axis. This allows you to safely copy & paste all transform curves at once, but if you want to copy & paste between arbitrary channels, you must ensure you only copy one curve, and paste into one channel. Here keys in all 3 channels were selected, but it was not visible to the user due to "Show Selected". The clipboard thus ended up containing all 3 curves, and Paste applied the axis matching logic.

Here keys in all 3 channels were selected, but it was not visible to the user due to "Show Selected"

Yeah, that's what's really confusing. Can we treat such keys as "unselected" in the copy logic?

> Here keys in all 3 channels were selected, but it was not visible to the user due to "Show Selected" Yeah, that's what's really confusing. Can we treat such keys as "unselected" in the copy logic?

Well, there is a common workflow in "hi-end", (Disney, Sony studios) animation. To get physically correct and appeal animation you sometimes copy curves from e.g. master_control to many other bones, face bones, arm bones, e.g. from location to rotation and location, depends on specific situation. Obviously you need to copy only one specific curve at once and paste it into specific curve. Previous behavior was unhandy enough, graph editor was too messy because of other curves\keyframes visible.

I agreed that copy hidden stuff makes almost no sense because if you want to get appeal animation you have to keep all your curves clean as possible and you should know what every keyframe for in its place. And if u get some unexpected 'hidden' keyframes you can spend enough time to find out why your animation for example has some new pops

Well, there is a common workflow in "hi-end", (Disney, Sony studios) animation. To get physically correct and appeal animation you sometimes copy curves from e.g. master_control to many other bones, face bones, arm bones, e.g. from location to rotation and location, depends on specific situation. Obviously you need to copy only one specific curve at once and paste it into specific curve. Previous behavior was unhandy enough, graph editor was too messy because of other curves\keyframes visible. I agreed that copy hidden stuff makes almost no sense because if you want to get appeal animation you have to keep all your curves clean as possible and you should know what every keyframe for in its place. And if u get some unexpected 'hidden' keyframes you can spend enough time to find out why your animation for example has some new pops
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63980
No description provided.